--- a/Finnish/main/Settings.apk/res/values-fi-rFI/strings.xml
+++ b/Finnish/main/Settings.apk/res/values-fi-rFI/strings.xml
@@ -313,12 +313,18 @@ Aseta vain laitteet vierekkäin (yleensä takakannet vastakkain) ja kosketa näy
   <string name="aod_clock_style_title">Kellon tyyli</string>
   <string name="aod_close_color_inversion">Tätä ominaisuutta ei voi yhdistää käänteisen värin kanssa. Poista käänteinen väri ensin käytöstä.</string>
   <string name="aod_got_it">Selvä</string>
-  <string name="aod_mode_summary">Näytä aina aika, päivämäärä ja viestit, kun näyttö on sammutettu.</string>
+  <string name="aod_lock_screen_date">"EEEE d. MMMM'ta'"</string>
+  <string name="aod_lock_screen_date_12">"EEEE d. MMMM'ta'"</string>
+  <string name="aod_mode_bg">Tausta</string>
+  <string name="aod_mode_clock">Kello</string>
+  <string name="aod_mode_style">Ajan tyyli ja tausta</string>
+  <string name="aod_mode_summary">Näytä aika, päivämäärä ja viestit, kun näyttö on sammutettu.</string>
   <string name="aod_mode_title">Aina käytössä -tila</string>
   <string name="aod_mode_time_summary">Ajasta milloin laitteesi tulisi siirtyä Aina käytössä -tilaan</string>
   <string name="aod_mode_time_title">Ajastus</string>
   <string name="aod_mode_turn_off">Pois käytöstä</string>
   <string name="aod_mode_turn_on">Käytössä</string>
+  <string name="aod_sample_date">Tiistai 10. Toukokuuta</string>
   <string name="aod_to_close">Poista käytöstä</string>
   <string name="apn_apn">APN</string>
   <string name="apn_auth_type">Todennustyyppi</string>
@@ -3351,6 +3357,8 @@ Valitse käyttöjärjestelmäsi:"</string>
   <string name="onehour">30 minuuttia</string>
   <string name="onekey_migrate">Mi Mover</string>
   <string name="onscreen_keyboard_settings_summary">Näyttönäppäimistön asetukset</string>
+  <string name="open_dark_mode_dialog_summary">Tietyt näytön asetukset eivät ole yhteensopivia Tummantilan kanssa. Asetukset palautetaan ennalleen, kun Tummatila on poistettu käytöstä. Otetaanko Tummatila käyttöön?</string>
+  <string name="open_dark_mode_dialog_title">Tummantilan yhteensopivuus</string>
   <string name="open_demo_mode">Ota käyttöön</string>
   <string name="open_demo_mode_warning_message">Kun Demotila on päällä, tilapalkissa oleva kello pysähtyy ja akku ja signaalin kuvakkeet näyttävät täyttä. Voit muuttaa tätä poistamalla Demotilan käytöstä tai käynnistämällä laitteen uudelleen.</string>
   <string name="open_miui_optimization_title">Ota MIUI optimointi käyttöön</string>
@@ -3974,12 +3982,14 @@ Tämä asetus vaikuttaa kaikkiin tämän puhelimen käyttäjiin."</string>
   <string name="screen">Näyttö</string>
   <string name="screen_button">Näyttöpainikkeet</string>
   <string name="screen_button_tips">Pyyhkäise alaspäin piilottaaksesi näyttöpainikkeet</string>
+  <string name="screen_cancel">Peruuta</string>
   <string name="screen_color_and_optimize">Värit &amp; kontrasti</string>
   <string name="screen_color_and_optimize_disabled">Värien lämpötilansäätö ei toimi Lukutilassa</string>
   <string name="screen_color_temperature">Värit</string>
   <string name="screen_color_temperature_and_saturation">Värit &amp; saturaatio</string>
   <string name="screen_compatibility_label">Ruudun yhteensopivuus</string>
   <string name="screen_compatibility_text">Tätä sovellusta ei välttämättä ole suunniteltu näytöllesi sopivaksi. Voit muuttaa asetuksia täältä.</string>
+  <string name="screen_confirm">Ota käyttöön</string>
   <string name="screen_effect">Kontrasti &amp; värit</string>
   <string name="screen_key_long_press">Navigointipainikkeiden pitkä painallus</string>
   <string name="screen_key_long_press_action">Käynnistettävä toiminto</string>
